CLC-1181 [Front-end] Top align items in the columns correctly https://jira.media.berkeley.edu/jira/browse/CLC-1181
Instead of putting padding/margin on the `ul`, we do it on the first-child of the `li`

--- a/app/assets/stylesheets/_tasks.scss
+++ b/app/assets/stylesheets/_tasks.scss
@@ -6,7 +6,6 @@
     }
     p {
       margin: 0;
-      padding-top: 0;
     }
   }
   .cc-widget-tasks-form {
